line spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ pre#li {
 }
 
 pre li {
-	line-height: 10px !important;	
+	line-height: 5px !important;	
 }
 
 .mycode {
